  |              point the client is assumed to be stable. Code that
  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.14.2.71 2004/06/19 23:34:11 kakace Exp $
==========================================================================

2.9000
------
2.9008-492  imp: ppc: Faster GARSP Vector core
            imp: all: Display which cruncher load/save/complete work (#2954)
            imp: all: Log more error messages (#3611)
            imp: macosx: Made the buffer threshold limits hw-dependant (#3626)
            fix: ppc: Select core #5 on PPC 601 (#3685)
            fix: macosx: Now recognize PPC 750FX (#3675)
            fix: macosx: No longer read the TAU on G4/G5.

2.9008-491  chg: all: Disabled OGR (Phase 1) contest
            fix: all: Client didn't stop as instructed (#3672)
            fix: macosx: Fixed an issue caused by white spaces in file paths.
            imp: macosx: Reworked the Startup Items implementation.
            imp: macosx: Display CPU temp. upon startup (if enabled/available)
            imp: all: Reworked the activity display in test mode (OGR-P2)
            imp: ppc: Select GARSP 5.1x Scalar by default on PPC 74x7/G5
            imp: ppc: Faster OGR-P2 cores.
            imp: amigaos: Allow crunchers to shutdown on exit when other user
                          tasks are monopolizing cpu time
            imp: macosx: Added PowerPC 970FX recognition (#3675)

2.9008-490  new: all: Enable OGR-24 and OGR-25 Phase 2 (finalization)
            new: amigaos: native OS4 port

2.9007-489  new: x86: new rc5-72 cores (#3265, #3398)
            fix: ppc: now detects 745/755 (G3) cpu under linux
            chg: x86: core preselection (#3477, #3580, #3602, #3621, #3625)