@@ -21,12 +21,13 @@ Version bump guide:
   `------------- Denotes a client rewrite.
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.14.2.71 2004/06/19 23:34:11 kakace Exp $
+Version change log: $Id: CHANGES.txt,v 1.14.2.72 2004/06/20 15:51:40 kakace Exp $
 ==========================================================================
 
 2.9000
 ------
 2.9008-492  imp: ppc: Faster GARSP Vector core
+            fix: all: Made weekly logs ISO 8601 compliant (#3336)
             imp: all: Display which cruncher load/save/complete work (#2954)
             imp: all: Log more error messages (#3611)
             imp: macosx: Made the buffer threshold limits hw-dependant (#3626)
